log
Thu 24 Aug 2023 04:14:26 AM UTC: 
 tests:  0|6
total_score: 0/70
320e5d5
Thu 24 Aug 2023 03:08:06 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:3: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   33 |   list->head = NULL;
      |   ^~~~
      |   List
list.c:33:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d7db2ed
Thu 24 Aug 2023 03:08:22 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:8: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   lista->size = 0;
      |        ^~
Compilation failed
19a3212
Thu 24 Aug 2023 03:09:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5581365
Thu 24 Aug 2023 03:52:21 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
6d3ad88
Thu 24 Aug 2023 03:53:21 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:6: error: expected ‘(’ before ‘list’
   40 |   if list->head == NULL{
      |      ^~~~
      |      (
list.c:40:10: error: statement with no effect [-Werror=unused-value]
   40 |   if list->head == NULL{
      |      ~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
395d3d9
Thu 24 Aug 2023 03:53:33 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
be98802
Thu 24 Aug 2023 04:06:54 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:10: error: unused variable ‘proximoNodo’ [-Werror=unused-variable]
   51 |   Node * proximoNodo = list->current->next;
      |          ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6a2b2eb
Thu 24 Aug 2023 04:07:57 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
ab8822d
Thu 24 Aug 2023 04:08:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c2406d5
Thu 24 Aug 2023 04:09:45 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 25/70
41aef1a
Thu 24 Aug 2023 04:16:45 PM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|4
total_score: 25/70
fb8a9c9
Thu 24 Aug 2023 04:18:00 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
df17728
Thu 24 Aug 2023 04:54:22 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:84:10: error: unused variable ‘newNode’ [-Werror=unused-variable]
   84 |   Node * newNode = createNode(data);
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7ea3519
Thu 24 Aug 2023 08:01:39 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
4acfbc1
Thu 24 Aug 2023 08:02:53 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
52031fb
Thu 24 Aug 2023 08:03:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7e25d8d
Thu 24 Aug 2023 08:07:46 PM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:92:34: error: stray ‘\302’ in program
   92 |     list->head->prev = nuevoNodo;¿
      |                                  ^
Compilation failed
7cb66a8
Thu 24 Aug 2023 08:07:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
48c73ca
Thu 24 Aug 2023 08:08:25 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
46726a5
Thu 24 Aug 2023 08:09:54 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
24c8aca
Thu 24 Aug 2023 08:10:35 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
7f44e7d
Thu 24 Aug 2023 08:17:08 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  10|2
total_score: 45/70
e9f9e9c
Thu 24 Aug 2023 08:19:09 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
4237fa9
Thu 24 Aug 2023 08:21:02 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
ec6f850
Thu 24 Aug 2023 08:22:07 PM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  10|2
total_score: 45/70
210c98a
Thu 24 Aug 2023 08:23:06 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
4a328a4
Thu 24 Aug 2023 08:24:07 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
3870838
Thu 24 Aug 2023 08:25:02 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
e07651b
Thu 24 Aug 2023 08:25:32 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
9be58f7
Thu 24 Aug 2023 08:28:50 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:107:12: error: variable ‘nuevoNodo’ set but not used [-Werror=unused-but-set-variable]
  107 |     Node * nuevoNodo = createNode(data);
      |            ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
14ea8e2
